# Keel

./: .gitignore  CLAUDE.md  COMMERCIAL-LICENSE.md  Keel.spec  LICENSE-GUI.md  LICENSE-NONCOMMERCIAL.md  README.es.md  README.md  ROADMAP.md  build.py  gui.py  gui_theme.py  keel.py  mastering.py  meters.py  mixer.py  prompt.md  recipes.py  requirements-build.txt  requirements-gui.txt  requirements.txt  setup.ps1  userpresets.py
.github/: FUNDING.yml
.github/workflows/: build-app.yml
docs/: RELEASE.md  release-notes.md
docs/adr/: 0001-scope-balance-and-master-only.md  0002-deterministic-no-ml.md  0003-master-loudness-target.md  0004-internal-anchor-and-relative-balance.md  0005-master-chain-clip-then-limit.md  0006-oversampled-true-peak.md  0007-group-delivery.md  0008-token-label-autodetect.md  0009-optional-matchering-reference.md  0010-24-bit-no-dither.md  0011-recipes-defaults-deep-merge.md  0012-keel-json-source-of-truth.md  0013-keel-py-library-facade.md  0014-named-master-presets.md  0015-bus-glue-off-by-default.md  0016-engine-delivery-agnostic.md  0017-offline-vendored-deps.md  0018-stdlib-unittest-suite.md  0019-gui-toolkit-pyside6.md  0020-gui-deps-online-not-vendored.md  0021-desktop-packaging-pyinstaller.md  0022-ci-build-pipeline.md  0023-dual-licensing.md  0024-distribution-and-pricing.md  0025-gui-noncommercial-license-and-donations.md  0026-plugin-architecture-juce-shell.md  0027-plugin-live-cpp-chain.md  0028-commercial-license-scope.md  0029-plugin-self-contained-master.md  0030-plugin-bus-glue-toggle.md  0031-master-tilt-knob-carveout.md  0032-encoded-export-formats.md  0033-plugin-oversampling-selector.md  0034-v2-reach-and-no-llm.md  0035-plugin-reference-readout.md  README.md
docs/social/: keel-instagram-launch.md  keel-linkedin-article.md  keel-linkedin-post.md
installer/: keel.iss
plugin/: CMakeLists.txt  README.md  build.ps1
plugin/Source/: KeelLookAndFeel.cpp  KeelLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
scripts/: make_launch_audio.py  make_launch_gif.py  make_launch_video.py  make_linkedin_cover.py  make_logo.py  make_readme_header.py
tests/: test_engine.py
